; ModuleID = '/home/carl/AnghaBench/openssl/ssl/statem/extr_extensions_srvr.c_tls_parse_ctos_early_data.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/statem/extr_extensions_srvr.c_tls_parse_ctos_early_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@SSL_AD_DECODE_ERROR = common dso_local global i32 0, align 4
@SSL_F_TLS_PARSE_CTOS_EARLY_DATA = common dso_local global i32 0, align 4
@SSL_R_BAD_EXTENSION = common dso_local global i32 0, align 4
@SSL_HRR_NONE = common dso_local global i64 0, align 8
@SSL_AD_ILLEGAL_PARAMETER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tls_parse_ctos_early_data(%struct.TYPE_4__* %0, i32* %1, i32 %2, i32* %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i64 %4, i64* %11, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = call i64 @PACKET_remaining(i32* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %5
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %17 = load i32, i32* @SSL_AD_DECODE_ERROR, align 4
  %18 = load i32, i32* @SSL_F_TLS_PARSE_CTOS_EARLY_DATA, align 4
  %19 = load i32, i32* @SSL_R_BAD_EXTENSION, align 4
  %20 = call i32 @SSLfatal(%struct.TYPE_4__* %16, i32 %17, i32 %18, i32 %19)
  store i32 0, i32* %6, align 4
  br label %34

21:                                               ; preds = %5
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @SSL_HRR_NONE, align 8
  %26 = icmp ne i64 %24, %25
  br i1 %26, label %27, label %33

27:                                               ; preds = %21
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %29 = load i32, i32* @SSL_AD_ILLEGAL_PARAMETER, align 4
  %30 = load i32, i32* @SSL_F_TLS_PARSE_CTOS_EARLY_DATA, align 4
  %31 = load i32, i32* @SSL_R_BAD_EXTENSION, align 4
  %32 = call i32 @SSLfatal(%struct.TYPE_4__* %28, i32 %29, i32 %30, i32 %31)
  store i32 0, i32* %6, align 4
  br label %34

33:                                               ; preds = %21
  store i32 1, i32* %6, align 4
  br label %34

34:                                               ; preds = %33, %27, %15
  %35 = load i32, i32* %6, align 4
  ret i32 %35
}

declare dso_local i64 @PACKET_remaining(i32*) #1

declare dso_local i32 @SSLfatal(%struct.TYPE_4__*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
